# poo2-aluguel-veiculos

./: .gitignore  README.md  REPORT.md  pyproject.toml
docs/: REPORT.md
scripts/: seed_database.py
src/clivet/: __init__.py  database.py  errors.py  main.py  repositories.py  services.py
src/clivet/backend/: __init__.py
src/clivet/backend/controllers/: __init__.py  app_controller.py
src/clivet/backend/database/: __init__.py  connection.py
src/clivet/backend/models/: __init__.py  customer.py  rental.py  vehicle.py
src/clivet/backend/repositories/: __init__.py  customer_repository.py  rental_repository.py  vehicle_repository.py
src/clivet/backend/services/: __init__.py  customer_service.py  rental_service.py  vehicle_service.py
src/clivet/controllers/: __init__.py  app.py
src/clivet/frontend/: __init__.py  admin.py  app.py  base.py  choices.py  formatters.py  labels.py  public.py  tables.py
src/clivet/models/: __init__.py  animal.py  booking.py  service.py  tutor.py
src/clivet/repositories/: __init__.py  animal.py  base.py  booking.py  service.py  tutor.py
src/clivet/services/: __init__.py  animal.py  base.py  booking.py  catalog.py  tutor.py
src/clivet/views/: __init__.py  app.py  choices.py  formatters.py  labels.py  widgets.py
src/clivet/views/frames/: __init__.py  animal.py  booking.py  history.py  service.py  tutor.py
src/matheushpmoreira/vehicle_rental_system/: main.py
src/matheushpmoreira/vehicle_rental_system/backend/: __init__.py  errors.py
src/matheushpmoreira/vehicle_rental_system/frontend/: __init__.py  admin.py  app.py  base.py  choices.py  form.py  formatters.py  labels.py  lang.py  public.py
src/system/: main.py
src/system/backend/: __init__.py  errors.py
src/system/frontend/: __init__.py  admin.py  app.py  base.py  choices.py  form.py  formatters.py  labels.py  public.py  tables.py
(+35 files in other folders)
