[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[project]
name = "vehicle-rental-system"
version = "0.1.0"
description = "Sistema de aluguel de veículos com interface gráfica em tkinter."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Matheus Henrique", email = "matheus.hpm@grad.ufsc.br" }
]
dependencies = []

[project.scripts]
vhs = "vehicle_rental_system.main:main"

[tool.uv.build-backend]
module-name = "matheushpmoreira.vehicle_rental_system"

[tool.ruff]
line-length = 120
