[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[project]
name = "poo2-clinica-veterinaria"
version = "0.1.0"
description = "Sistema para gerenciamento de uma clínica veterinária."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Matheus Henrique", email = "matheus.hpm@grad.ufsc.br" }
]
dependencies = []

#[project.scripts]
#vhs = "matheushpmoreira.clivet.main:main"
#
#[tool.uv.build-backend]
#module-name = "matheushpmoreira.clivet"

[tool.ruff]
line-length = 120
